--- a/contactos.html
+++ b/contactos.html
@@ -14,7 +14,7 @@
 	<header>
         <div class="container">
             <h1>
-                <img src="https://pbs.twimg.com/media/Fu734d5WwAIfIHr?format=png&name=small" alt="logo" class="logo-image">
+                <img src="https://pbs.twimg.com/media/FxjA9C3XoAA-2qD?format=png&name=small" alt="logo" class="logo-image">
             </h1>
         </div>
     </header>
@@ -32,7 +32,8 @@
 	<main>
         <button onclick="window.location.href = 'tel:3815551234'">Llamada</button>
         <button onclick="window.location.href='https://wa.me/5493815551234'" type="button"> Whatsapp </button>
-         <button><a href="mailto:hjcolombres@hotmail.com">Mail</a></button>
+        <button onclick="window.location.href='mailto:hjcolombres@hotmail.com'">Mail</button>
+
          </main>
 </body>
 </html>
