--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <main>
     <section class="principal">
            <h2 class="titulo-principal">Casa de Raco</h2>
-            <p>Ubicada en el corazón de  <strong>Raco</strong> .</p>
+            <p>Ubicada en el corazón de  <strong>Raco</strong></p>
             <p id="mision"><em>Alquilo casa en Raco de tres dormitorios: <strong>"en un terreno de 1400 m². 
 Excelente ubicación, en plena villa, a metros del Club. Muy lindas vistas.
 Capacidad para seis personas"</strong>.</em></p>
@@ -68,7 +68,7 @@ Capacidad para seis personas"</strong>.</em></p>
                 <li class="items">Wifi</li>
                 <li class="items">Salamandra</li>
                 <li class="items">Calefactor en cada cuarto</li>
-                <li class="items">Ubicación</li>
+                <li class="items">Excelente ubicación</li>
                 <li class="items">Hermosas vistas</li>
             </ul>
             </div>
