--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ Capacidad para seis personas"</strong>.</em></p>
 <section class="mapa">
     <h3 class="titulo-principal">Nuestra Ubicacion</h3>
     <p>La casa se encuentra ubicada en el centro de Raco</p>
- <div class="mapa-contenido"><iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3565.1501481436044!2d-65.427866!3d-26.675680000000003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjbCsDQwJzMyLjUiUyA2NcKwMjUnNDAuMyJX!5e0!3m2!1ses!2sar!4v1685636982025!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+ <div class="mapa-contenido"><iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3565.1501481436044!2d-65.427866!3d-26.675680000000003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjbCsDQwJzMyLjUiUyA2NcKwMjUnNDAuMyJX!5e0!3m2!1ses!2sar!4v1685636982025!5m2!1ses!2sar" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </div>
 
 
